# task2.3_FIR_Filter

./: CMakeLists.txt  README.md
compare_matlab_cpp/: filter_parameters.txt
myFIR/: CMakeLists.txt  FIR_coef_library.cpp  FIR_coef_library.hpp
myFIR/tests/: CMakeLists.txt  tests.cpp
